--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   },
